--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- ?fontawesome -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="shortcut icon" href="./img/logoicon.ico" type="image/x-icon">
 </head>
 
 <body>
